[gd_scene load_steps=57 format=3 uid="uid://dq8uh7vhsw3ib"]

[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/Player.gd" id="1_q8dkk"]
[ext_resource type="Texture2D" uid="uid://c5h636nq7madp" path="res://assets/art/maincharacter/attack_1/attack1.png" id="2_r3uo2"]
[ext_resource type="Texture2D" uid="uid://cgnro828wnjrt" path="res://assets/art/maincharacter/attack_1/attack2.png" id="3_87ffy"]
[ext_resource type="Texture2D" uid="uid://cooahrk48o84v" path="res://assets/art/maincharacter/attack_1/attack3.png" id="4_qpijy"]
[ext_resource type="Texture2D" uid="uid://biu0oie2maaj5" path="res://assets/art/maincharacter/attack_1/attack4.png" id="5_3wgpa"]
[ext_resource type="Texture2D" uid="uid://cnc2mixi3w65b" path="res://assets/art/maincharacter/attack_2/attack1.png" id="6_xf4c1"]
[ext_resource type="Texture2D" uid="uid://deljj126f8ps" path="res://assets/art/maincharacter/attack_2/attack2.png" id="7_85of3"]
[ext_resource type="Texture2D" uid="uid://c8fdgk632x408" path="res://assets/art/maincharacter/attack_2/attack3.png" id="8_xpv1e"]
[ext_resource type="Texture2D" uid="uid://cmnons2qf7x5a" path="res://assets/art/maincharacter/attack_2/attack4.png" id="9_l18fe"]
[ext_resource type="Texture2D" uid="uid://dva61jau8ro0e" path="res://assets/art/maincharacter/attack_2/attack5.png" id="10_rjli5"]
[ext_resource type="Texture2D" uid="uid://dg6bts7o3daae" path="res://assets/art/maincharacter/attack3/attack1.png" id="11_k7m2o"]
[ext_resource type="Texture2D" uid="uid://clly0uw5udakp" path="res://assets/art/maincharacter/attack3/attack2.png" id="12_p8all"]
[ext_resource type="Texture2D" uid="uid://chwh6nl65n7m6" path="res://assets/art/maincharacter/attack3/attack3.png" id="13_f82n6"]
[ext_resource type="Texture2D" uid="uid://bi2w1kvouthtb" path="res://assets/art/maincharacter/attack3/attack4.png" id="14_3ncon"]
[ext_resource type="Texture2D" uid="uid://o3qysrnuqxm4" path="res://assets/art/maincharacter/jump/jump1.png" id="15_ntkre"]
[ext_resource type="Texture2D" uid="uid://bspcgc655g5p0" path="res://assets/art/maincharacter/jump/jump2.png" id="16_joxmd"]
[ext_resource type="Texture2D" uid="uid://bv8bktfv6i8uy" path="res://assets/art/maincharacter/jump/jump3.png" id="17_vqa1l"]
[ext_resource type="Texture2D" uid="uid://b3vrcx7axogup" path="res://assets/art/maincharacter/idle/idle1.png" id="18_chio0"]
[ext_resource type="Texture2D" uid="uid://dwik7a26qfofo" path="res://assets/art/maincharacter/dead/dead1.png" id="18_d7xu1"]
[ext_resource type="Texture2D" uid="uid://nsixnrjcscye" path="res://assets/art/maincharacter/dead/dead2.png" id="19_dnava"]
[ext_resource type="Texture2D" uid="uid://cnytp7ftryduo" path="res://assets/art/maincharacter/idle/idle2.png" id="19_orpjq"]
[ext_resource type="Texture2D" uid="uid://cnh03cx7k0lyv" path="res://assets/art/maincharacter/idle/idle3.png" id="20_djji2"]
[ext_resource type="Texture2D" uid="uid://dny2oypo2gc7o" path="res://assets/art/maincharacter/dead/dead3.png" id="20_g083d"]
[ext_resource type="Texture2D" uid="uid://dko4apqljcl6t" path="res://assets/art/maincharacter/dead/dead4.png" id="21_075ib"]
[ext_resource type="Texture2D" uid="uid://dqpg2457akgdp" path="res://assets/art/maincharacter/idle/idle4.png" id="21_k7bhu"]
[ext_resource type="Texture2D" uid="uid://jcmqbnwhh4ta" path="res://assets/art/maincharacter/idle/idle5.png" id="22_1mh8j"]
[ext_resource type="Texture2D" uid="uid://bowe6ilakyv6w" path="res://assets/art/maincharacter/dead/dead5.png" id="22_if2jr"]
[ext_resource type="Texture2D" uid="uid://b2texpbqkihpi" path="res://assets/art/maincharacter/dead/dead6.png" id="23_2ldhp"]
[ext_resource type="Texture2D" uid="uid://dodqi7jd642nf" path="res://assets/art/maincharacter/jump/jump4.png" id="23_tkp3n"]
[ext_resource type="Texture2D" uid="uid://mxhx3tfho41a" path="res://assets/art/maincharacter/jump/jump5.png" id="24_xebhn"]
[ext_resource type="Texture2D" uid="uid://dqq6nno1a7c4r" path="res://assets/art/maincharacter/jump/jump6.png" id="25_0sq3d"]
[ext_resource type="Texture2D" uid="uid://cf1ans6nmau7c" path="res://assets/art/maincharacter/jump/jump7.png" id="26_to2et"]
[ext_resource type="Texture2D" uid="uid://d16qnnqd1v1i0" path="res://assets/art/maincharacter/jump/jump8.png" id="27_8csqs"]
[ext_resource type="Texture2D" uid="uid://c42nf17akqjpq" path="res://assets/art/maincharacter/jump/jump9.png" id="28_uddj4"]
[ext_resource type="Texture2D" uid="uid://bkqc0lionaglb" path="res://assets/art/maincharacter/walk/walk1.png" id="29_ugvi1"]
[ext_resource type="Texture2D" uid="uid://bk8ecdyxyay0d" path="res://assets/art/maincharacter/walk/walk2.png" id="30_esab7"]
[ext_resource type="Texture2D" uid="uid://d3co22qhe8078" path="res://assets/art/maincharacter/walk/walk3.png" id="31_nc8ik"]
[ext_resource type="Texture2D" uid="uid://c6l64wyavbh48" path="res://assets/art/maincharacter/walk/walk4.png" id="32_a4v4d"]
[ext_resource type="Texture2D" uid="uid://ddp7u8x4vet7q" path="res://assets/art/maincharacter/walk/walk5.png" id="33_iek81"]
[ext_resource type="Texture2D" uid="uid://bxggewynna8dy" path="res://assets/art/maincharacter/walk/walk6.png" id="34_ji43f"]
[ext_resource type="Texture2D" uid="uid://2ser6xakuaa4" path="res://assets/art/maincharacter/walk/walk7.png" id="35_pjofi"]
[ext_resource type="Texture2D" uid="uid://cuxx8y67sibxh" path="res://assets/art/maincharacter/walk/walk8.png" id="36_pecxx"]
[ext_resource type="Texture2D" uid="uid://d4mkt2d67ygpa" path="res://assets/art/maincharacter/walk/walk9.png" id="37_u1tm3"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/Sword.gd" id="38_2sws3"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/gravity.gd" id="39_o7gcd"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/player_state_machine.gd" id="40_pppj8"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/attack_state.gd" id="41_aywb1"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/jump_state.gd" id="42_qltdg"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/dead_state.gd" id="43_63p2y"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/walk_state.gd" id="44_t0jfd"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/double_jump.gd" id="45_a2atc"]
[ext_resource type="Script" path="res://Anton/final mobs and scripts/mobs and resources/main character/sprites/Scripts/idle_state.gd" id="46_p2kkt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gt4wa"]
animations = [{
"frames": [{
"duration": 0.7,
"texture": ExtResource("2_r3uo2")
}, {
"duration": 0.7,
"texture": ExtResource("3_87ffy")
}, {
"duration": 0.7,
"texture": ExtResource("4_qpijy")
}, {
"duration": 0.7,
"texture": ExtResource("5_3wgpa")
}],
"loop": false,
"name": &"attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("6_xf4c1")
}, {
"duration": 0.5,
"texture": ExtResource("7_85of3")
}, {
"duration": 0.5,
"texture": ExtResource("8_xpv1e")
}, {
"duration": 0.5,
"texture": ExtResource("9_l18fe")
}, {
"duration": 0.5,
"texture": ExtResource("10_rjli5")
}],
"loop": false,
"name": &"attack_2",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": ExtResource("11_k7m2o")
}, {
"duration": 0.7,
"texture": ExtResource("12_p8all")
}, {
"duration": 0.7,
"texture": ExtResource("13_f82n6")
}, {
"duration": 0.7,
"texture": ExtResource("14_3ncon")
}],
"loop": false,
"name": &"attack_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ntkre")
}, {
"duration": 1.0,
"texture": ExtResource("16_joxmd")
}, {
"duration": 1.0,
"texture": ExtResource("17_vqa1l")
}],
"loop": false,
"name": &"charge_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_d7xu1")
}, {
"duration": 1.0,
"texture": ExtResource("19_dnava")
}, {
"duration": 1.0,
"texture": ExtResource("20_g083d")
}, {
"duration": 1.0,
"texture": ExtResource("21_075ib")
}, {
"duration": 1.0,
"texture": ExtResource("22_if2jr")
}, {
"duration": 20.0,
"texture": ExtResource("23_2ldhp")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_chio0")
}, {
"duration": 1.0,
"texture": ExtResource("19_orpjq")
}, {
"duration": 1.0,
"texture": ExtResource("20_djji2")
}, {
"duration": 1.0,
"texture": ExtResource("21_k7bhu")
}, {
"duration": 1.0,
"texture": ExtResource("22_1mh8j")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_tkp3n")
}, {
"duration": 1.0,
"texture": ExtResource("24_xebhn")
}, {
"duration": 1.0,
"texture": ExtResource("25_0sq3d")
}, {
"duration": 1.0,
"texture": ExtResource("26_to2et")
}, {
"duration": 1.0,
"texture": ExtResource("27_8csqs")
}, {
"duration": 1.0,
"texture": ExtResource("28_uddj4")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_ugvi1")
}, {
"duration": 1.0,
"texture": ExtResource("30_esab7")
}, {
"duration": 1.0,
"texture": ExtResource("31_nc8ik")
}, {
"duration": 1.0,
"texture": ExtResource("32_a4v4d")
}, {
"duration": 1.0,
"texture": ExtResource("33_iek81")
}, {
"duration": 1.0,
"texture": ExtResource("34_ji43f")
}, {
"duration": 1.0,
"texture": ExtResource("35_pjofi")
}, {
"duration": 1.0,
"texture": ExtResource("36_pecxx")
}, {
"duration": 1.0,
"texture": ExtResource("37_u1tm3")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_35be4"]
radius = 18.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p4rx2"]
radius = 19.0
height = 78.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5csln"]
size = Vector2(19.5, 67.5)

[node name="Jinbei" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "sword") groups=["Player"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_q8dkk")
state_machine = NodePath("StateMachine")
sword = NodePath("Sword")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(3, -31)
sprite_frames = SubResource("SpriteFrames_gt4wa")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_35be4")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 96
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CapsuleShape2D_p4rx2")

[node name="Sword" type="Area2D" parent="." groups=["Player_strike"]]
collision_layer = 96
collision_mask = 96
monitorable = false
script = ExtResource("38_2sws3")
damage_amount = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(-4.75, -1.75)
shape = SubResource("RectangleShape2D_5csln")

[node name="Range" type="Marker2D" parent="."]

[node name="Gravity" type="Node2D" parent="." node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("39_o7gcd")
character_body_2d = NodePath("..")
animated_sprite_2d = NodePath("../AnimatedSprite2D")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_player_node_state")]
script = ExtResource("40_pppj8")
initial_player_node_state = NodePath("idle")

[node name="attack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d", "attack_range", "hit_box", "hit_space")]
script = ExtResource("41_aywb1")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
attack_range = NodePath("../../Range")
hit_box = NodePath("../../Sword/CollisionShape2D")
hit_space = NodePath("../../Sword")

[node name="jump" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("42_qltdg")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
jump_force = 300
SPEED = 100

[node name="dead" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("43_63p2y")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="walk" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("44_t0jfd")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="double_jump" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("45_a2atc")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
jump_force = 200
SPEED = 100

[node name="idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("46_p2kkt")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Regen" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Dead reset" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="Dead reset" to="." method="_on_dead_reset_timeout"]
